workloads/dummy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-dev
  namespace: dummy-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy-dev
  template:
    metadata:
      labels:
        app: dummy-dev
        terraform: "false"
    spec:
      # volumes:
      #   - name: log-pvc
      #     persistentVolumeClaim:
      #       claimName: data-minio-0
      containers:
      - name: dummy
        image: klimdos/python-flask-dummy:2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        # volumeMounts:
        # - mountPath: /opt/logs
        #   name: log-pvc
