workloads/dummy-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: dummy-dev-svc
  namespace: dummy-dev
spec:
  ports:
    - port: 80
      name: plaintext
      targetPort: 8080
  selector:
    app: dummy-dev
  type: LoadBalancer
